done my resume work

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <iframe src="My_Resume.pdf"></iframe>
+    <iframe src="My_Resume Edited.pdf"></iframe>
 </body>
 </html>
