updated resume added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head>
 <body>
-    <iframe src="My_Resume Edited.pdf"></iframe>
+    <iframe src="Nk_resume_2026.pdf" style="width: 100%; height: 100%;"></iframe>
 </body>
 </html>
